@@ -38,12 +38,12 @@ BEGIN
 #if defined(UNICODE)
     CONTROL         "",IDC_MESSAGE,"RichEdit20W",ES_MULTILINE |
                     ES_AUTOVSCROLL | ES_NOHIDESEL | ES_WANTRETURN |
-                    WS_VSCROLL | WS_TABSTOP,0,49,144,29,WS_EX_ACCEPTFILES |
+                    WS_VSCROLL | WS_TABSTOP,0,48,144,30,WS_EX_ACCEPTFILES |
                     WS_EX_STATICEDGE
 #else
     CONTROL         "",IDC_MESSAGE,"RichEdit20A",ES_MULTILINE |
                     ES_AUTOVSCROLL | ES_NOHIDESEL | ES_WANTRETURN |
-                    WS_VSCROLL | WS_TABSTOP,0,49,144,29,WS_EX_ACCEPTFILES |
+                    WS_VSCROLL | WS_TABSTOP,0,48,144,30,WS_EX_ACCEPTFILES |
                     WS_EX_STATICEDGE
 #endif
     CONTROL         "",IDOK,"MButtonClass",WS_TABSTOP,156,32,24,14,
@@ -66,15 +66,15 @@ BEGIN
     CONTROL         "",IDC_MULTISPLITTER,"Static",SS_ENHMETAFILE,186,21,2,40
     CONTROL         "",IDC_CLIST,"CListControl",WS_TABSTOP | 0x248,184,0,30,
                     78,WS_EX_CLIENTEDGE
-    CONTROL         "",IDC_SPLITTER,"Static",SS_ENHMETAFILE,0,47,187,2,
+    CONTROL         "",IDC_SPLITTER,"Static",SS_ENHMETAFILE,0,47,187,1,
                     WS_EX_STATICEDGE
-    CONTROL         "",IDC_TYPINGNOTIFY,"Button",BS_OWNERDRAW | NOT 
+    CONTROL         "",IDC_TYPINGNOTIFY,"Button",BS_OWNERDRAW | NOT
                     WS_VISIBLE | WS_TABSTOP,2,67,12,12
     CONTROL         "&D",IDC_PROTOCOL,"MButtonClass",WS_TABSTOP,1,32,16,14,
                     0x18000000L
     CONTROL         "&U",IDC_NAME,"MButtonClass",WS_TABSTOP,17,32,16,14,
                     0x18000000L
-    CONTROL         "",IDC_PROTOMENU,"MButtonClass",WS_TABSTOP,33,32,8,14,
+    CONTROL         "",IDC_PROTOMENU,"MButtonClass",WS_TABSTOP,34,32,8,14,
                     0x18000000L
     CONTROL         "&E",IDC_SMILEYBTN,"MButtonClass",WS_TABSTOP,44,32,16,14,
                     0x18000000L
@@ -90,7 +90,7 @@ BEGIN
                     14,0x18000000L
     CONTROL         "",IDC_CONTACTPIC,"Button",BS_OWNERDRAW,155,54,34,25,
                     0x18000000L
-    CONTROL         "",IDC_SPLITTER5,"Static",SS_ENHMETAFILE,0,30,187,2,
+    CONTROL         "",IDC_SPLITTER5,"Static",SS_ENHMETAFILE,0,31,187,1,
                     WS_EX_STATICEDGE
     CONTROL         "&Retry",IDC_RETRY,"MButtonClass",WS_TABSTOP,26,10,35,12
     CONTROL         "&Cancel",IDC_CANCELSEND,"MButtonClass",WS_TABSTOP,66,10,
